# cpplox

./: CMakeLists.txt
src/: Parser.cpp  Parser.h  Runner.cpp  Runner.h  Scanner.cpp  Scanner.h  main.cpp
src/model/: Expr.h  Token.cpp  Token.h
src/util/: ErrorHandling.cpp  ErrorHandling.h  magic_enum.hpp
src/visitors/: EvaluationVisitor.cpp  EvaluationVisitor.h  PrettyPrintVisitor.cpp  PrettyPrintVisitor.h
test/: EvaluationTest.cpp  ExprTest.cpp  ParserTest.cpp  ScannerTest.cpp  catch.hpp
